--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -162,7 +162,28 @@ h6 {
   display: block;
   width: 120px;
   border: 8px solid color-mix(in srgb, var(--default-color), transparent 85%);
+  border-radius: 45% !important;
+  box-shadow: 0 0 15px 0px blue; /* couleur initiale */
+  animation: moveAndGlow 5s infinite alternate;
 }
+
+
+/* Animation combinée : mouvement + couleur */
+@keyframes moveAndGlow {
+  0% {
+    transform: translateY(0);
+    box-shadow: 0 0 15px 0px blue;
+  }
+  50% {
+    transform: translateY(-15px);
+    box-shadow: 0 0 25px 5px purple; /* mix bleu/rouge */
+  }
+  100% {
+    transform: translateY(0);
+    box-shadow: 0 0 15px 0px red;
+  }
+}
+
 
 .header .logo {
   line-height: 1;
@@ -606,6 +627,11 @@ section,
 
 .hero .social-links a:hover {
   color: var(--accent-color);
+}
+
+.typed {
+  color: rgb(223, 77, 77);
+  background-color: rgb(52, 50, 168);
 }
 
 @media (max-width: 768px) {
