--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,15 +1,3 @@
-/**
-* Template Name: iPortfolio
-* Template URL: https://bootstrapmade.com/iportfolio-bootstrap-portfolio-websites-template/
-* Updated: Jun 29 2024 with Bootstrap v5.3.3
-* Author: BootstrapMade.com
-* License: https://bootstrapmade.com/license/
-*/
-
-/*--------------------------------------------------------------
-# Font & Color Variables
-# Help: https://bootstrapmade.com/color-system/
---------------------------------------------------------------*/
 /* Fonts */
 :root {
   --default-font: "Roboto",  system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
@@ -17,27 +5,27 @@
   --nav-font: "Poppins",  sans-serif;
 }
 
-/* Global Colors - The following color variables are used throughout the website. Updating them here will change the color scheme of the entire website */
+/* Couleurs globales : les variables de couleur suivantes sont utilisées sur l'ensemble du site web. Leur mise à jour modifiera la palette de couleurs de l'ensemble du site. */
 :root { 
-  --background-color: #ffffff; /* Background color for the entire website, including individual sections */
-  --default-color: #272829; /* Default color used for the majority of the text content across the entire website */
-  --heading-color: #050d18; /* Color for headings, subheadings and title throughout the website */
-  --accent-color: #149ddd; /* Accent color that represents your brand on the website. It's used for buttons, links, and other elements that need to stand out */
-  --surface-color: #ffffff; /* The surface color is used as a background of boxed elements within sections, such as cards, icon boxes, or other elements that require a visual separation from the global background. */
-  --contrast-color: #ffffff; /* Contrast color for text, ensuring readability against backgrounds of accent, heading, or default colors. */
+  --background-color: #ffffff; /* Couleur d'arrière-plan pour l'ensemble du site Web, y compris les sections individuelles */
+  --default-color: #272829; /* Couleur par défaut utilisée pour la majorité du contenu textuel sur l'ensemble du site Web */
+  --heading-color: #050d18; /* Couleur pour les titres, les sous-titres et le titre sur tout le site Web */
+  --accent-color: #149ddd; /* Couleur d'accentuation qui représente votre marque sur le site web. Elle est utilisée pour les boutons, les liens et autres éléments qui doivent se démarquer. */
+  --surface-color: #ffffff; /* La couleur de surface est utilisée comme arrière-plan des éléments encadrés dans les sections, tels que les cartes, les boîtes d'icônes ou d'autres éléments qui nécessitent une séparation visuelle de l'arrière-plan global. */
+  --contrast-color: #ffffff; /* Couleur de contraste pour le texte, garantissant la lisibilité sur les arrière-plans d'accentuation, de titre ou de couleurs par défaut. */
 }
 
-/* Nav Menu Colors - The following color variables are used specifically for the navigation menu. They are separate from the global colors to allow for more customization options */
+/* Couleurs du menu de navigation : les variables de couleur suivantes sont utilisées spécifiquement pour le menu de navigation. Elles sont distinctes des couleurs globales pour offrir davantage d'options de personnalisation. */
 :root {
-  --nav-color: #a8a9b4;  /* The default color of the main navmenu links */
-  --nav-hover-color: #ffffff; /* Applied to main navmenu links when they are hovered over or active */
-  --nav-mobile-background-color: #040b14; /* Used as the background color for mobile navigation menu */
-  --nav-dropdown-background-color: #040b14; /* Used as the background color for dropdown items that appear when hovering over primary navigation items */
-  --nav-dropdown-color: #a8a9b4; /* Used for navigation links of the dropdown items in the navigation menu. */
-  --nav-dropdown-hover-color: #ffffff; /* Similar to --nav-hover-color, this color is applied to dropdown navigation links when they are hovered over. */
+  --nav-color: #a8a9b4;  /* La couleur par défaut des liens du menu de navigation principal */
+  --nav-hover-color: #ffffff; /* Appliqué aux liens du menu de navigation principal lorsqu'ils sont survolés ou actifs */
+  --nav-mobile-background-color: #040b14; /* Utilisé comme couleur d'arrière-plan pour le menu de navigation mobile */
+  --nav-dropdown-background-color: #040b14; /* Utilisé comme couleur d'arrière-plan pour les éléments déroulants qui apparaissent lorsque vous survolez les éléments de navigation principaux */
+  --nav-dropdown-color: #a8a9b4; /* Utilisé pour les liens de navigation des éléments déroulants dans le menu de navigation. */
+  --nav-dropdown-hover-color: #ffffff; /* Similaire à --nav-hover-color, cette couleur est appliquée aux liens de navigation déroulants lorsqu'ils sont survolés. */
 }
 
-/* Color Presets - These classes override global colors when applied to any section or element, providing reuse of the sam color scheme. */
+/* Préréglages de couleur - Ces classes remplacent les couleurs globales lorsqu'elles sont appliquées à une section ou un élément, permettant ainsi la réutilisation du même schéma de couleurs. */
 
 .light-background {
   --background-color: #cdcfff;
@@ -52,13 +40,13 @@
   --contrast-color: #ffffff;
 }
 
-/* Smooth scroll */
+/* Défilement fluide */
 :root {
   scroll-behavior: smooth;
 }
 
 /*--------------------------------------------------------------
-# General Styling & Shared Classes
+# General Styling & Shared Classes / Style général et cours partagés
 --------------------------------------------------------------*/
 body {
   color: var(--default-color);
@@ -87,60 +75,8 @@ h6 {
   font-family: var(--heading-font);
 }
 
-/* PHP Email Form Messages
-------------------------------*/
-.php-email-form .error-message {
-  display: none;
-  background: #df1529;
-  color: #ffffff;
-  text-align: left;
-  padding: 15px;
-  margin-bottom: 24px;
-  font-weight: 600;
-}
-
-.php-email-form .sent-message {
-  display: none;
-  color: #ffffff;
-  background: #059652;
-  text-align: center;
-  padding: 15px;
-  margin-bottom: 24px;
-  font-weight: 600;
-}
-
-.php-email-form .loading {
-  display: none;
-  background: var(--surface-color);
-  text-align: center;
-  padding: 15px;
-  margin-bottom: 24px;
-}
-
-.php-email-form .loading:before {
-  content: "";
-  display: inline-block;
-  border-radius: 50%;
-  width: 24px;
-  height: 24px;
-  margin: 0 10px -6px 0;
-  border: 3px solid var(--accent-color);
-  border-top-color: var(--surface-color);
-  animation: php-email-form-loading 1s linear infinite;
-}
-
-@keyframes php-email-form-loading {
-  0% {
-    transform: rotate(0deg);
-  }
-
-  100% {
-    transform: rotate(360deg);
-  }
-}
-
 /*--------------------------------------------------------------
-# Global Header
+# Global Header / En-tête global
 --------------------------------------------------------------*/
 .header {
   color: var(--default-color);
@@ -168,7 +104,7 @@ h6 {
 }
 
 
-/* Animation combinée : mouvement + couleur */
+/* Animation combinée : mouvement + couleur / Animation combinée : mouvement + couleur*/
 @keyframes moveAndGlow {
   0% {
     transform: translateY(0);
@@ -176,7 +112,7 @@ h6 {
   }
   50% {
     transform: translateY(-15px);
-    box-shadow: 0 0 25px 5px purple; /* mix bleu/rouge */
+    box-shadow: 0 0 25px 5px purple; /* mix bleu/rouge / mélange bleu/rouge */
   }
   100% {
     transform: translateY(0);
@@ -269,7 +205,7 @@ h6 {
 }
 
 /*--------------------------------------------------------------
-# Navigation Menu
+# Navigation Menu - Menu de navigation
 --------------------------------------------------------------*/
 .mobile-nav-toggle {
   display: none;
@@ -384,7 +320,7 @@ h6 {
 }
 
 /*--------------------------------------------------------------
-# Global Footer
+# Global Footer - Pied de page global
 --------------------------------------------------------------*/
 .footer {
   color: var(--default-color);
@@ -406,7 +342,7 @@ h6 {
 }
 
 /*--------------------------------------------------------------
-# Preloader
+# Preloader - Préchargeur
 --------------------------------------------------------------*/
 #preloader {
   position: fixed;
@@ -441,7 +377,7 @@ h6 {
 }
 
 /*--------------------------------------------------------------
-# Scroll Top Button
+# Scroll Top Button - Bouton de défilement vers le haut
 --------------------------------------------------------------*/
 .scroll-top {
   position: fixed;
@@ -475,7 +411,7 @@ h6 {
 }
 
 /*--------------------------------------------------------------
-# Disable aos animation delay on mobile devices
+# Disable aos animation delay on mobile devices -  Désactiver le délai d'animation AOS sur les appareils mobiles
 --------------------------------------------------------------*/
 @media screen and (max-width: 768px) {
   [data-aos-delay] {
@@ -484,7 +420,7 @@ h6 {
 }
 
 /*--------------------------------------------------------------
-# Global Page Titles & Breadcrumbs
+# Global Page Titles & Breadcrumbs - Titres de page et fils d'Ariane globaux
 --------------------------------------------------------------*/
 .page-title {
   color: var(--default-color);
@@ -520,7 +456,7 @@ h6 {
 }
 
 /*--------------------------------------------------------------
-# Global Sections
+# Global Sections - Sections mondiales
 --------------------------------------------------------------*/
 section,
 .section {
@@ -531,7 +467,7 @@ section,
 }
 
 /*--------------------------------------------------------------
-# Global Section Titles
+# Global Section Titles - Titres des sections mondiales
 --------------------------------------------------------------*/
 .section-title {
   padding-bottom: 60px;
@@ -562,7 +498,7 @@ section,
 }
 
 /*--------------------------------------------------------------
-# Hero Section
+# Hero Section - Section Héros
 --------------------------------------------------------------*/
 .hero {
   width: 100%;
@@ -646,7 +582,7 @@ section,
 }
 
 /*--------------------------------------------------------------
-# About Section
+# About Section - À propos de la section
 --------------------------------------------------------------*/
 .about .content h2 {
   font-weight: 700;
@@ -676,7 +612,7 @@ section,
 }
 
 /*--------------------------------------------------------------
-# Stats Section
+# Stats Section - Section Statistiques
 --------------------------------------------------------------*/
 .stats .stats-item {
   padding: 30px;
@@ -709,7 +645,7 @@ section,
 }
 
 /*--------------------------------------------------------------
-# Skills Section
+# Skills Section - Rubrique Compétences
 --------------------------------------------------------------*/
 .skills .progress {
   height: 60px;
@@ -746,7 +682,7 @@ section,
 }
 
 /*--------------------------------------------------------------
-# Resume Section
+# Resume Section - Reprendre la section
 --------------------------------------------------------------*/
 .resume .resume-title {
   color: var(--heading-color);
@@ -805,7 +741,7 @@ section,
 }
 
 /*--------------------------------------------------------------
-# Portfolio Section
+# Portfolio Section - Section Portfolio
 --------------------------------------------------------------*/
 .portfolio .portfolio-filters {
   padding: 0;
@@ -918,157 +854,7 @@ section,
 }
 
 /*--------------------------------------------------------------
-# Services Section
---------------------------------------------------------------*/
-.services .service-item {
-  position: relative;
-}
-
-.services .service-item .icon {
-  background: var(--accent-color);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 54px;
-  height: 54px;
-  border-radius: 50%;
-  transition: 0.5s;
-  border: 1px solid var(--accent-color);
-  margin-right: 20px;
-}
-
-.services .service-item .icon i {
-  color: var(--contrast-color);
-  font-size: 24px;
-  line-height: 0;
-}
-
-.services .service-item:hover .icon {
-  background: var(--surface-color);
-}
-
-.services .service-item:hover .icon i {
-  color: var(--accent-color);
-}
-
-.services .service-item .title {
-  font-weight: 700;
-  margin-bottom: 15px;
-  font-size: 18px;
-}
-
-.services .service-item .title a {
-  color: var(--heading-color);
-}
-
-.services .service-item .title a:hover {
-  color: var(--accent-color);
-}
-
-.services .service-item .description {
-  line-height: 24px;
-  font-size: 14px;
-}
-
-/*--------------------------------------------------------------
-# Testimonials Section
---------------------------------------------------------------*/
-.testimonials .testimonials-carousel,
-.testimonials .testimonials-slider {
-  overflow: hidden;
-}
-
-.testimonials .testimonial-item {
-  box-sizing: content-box;
-  text-align: center;
-  min-height: 320px;
-}
-
-.testimonials .testimonial-item .testimonial-img {
-  width: 90px;
-  border-radius: 50%;
-  margin: 0 auto;
-}
-
-.testimonials .testimonial-item h3 {
-  font-size: 18px;
-  font-weight: bold;
-  margin: 10px 0 5px 0;
-}
-
-.testimonials .testimonial-item h4 {
-  font-size: 14px;
-  color: color-mix(in srgb, var(--default-color), transparent 20%);
-  margin: 0;
-}
-
-.testimonials .testimonial-item .quote-icon-left,
-.testimonials .testimonial-item .quote-icon-right {
-  color: color-mix(in srgb, var(--accent-color), transparent 40%);
-  font-size: 26px;
-  line-height: 0;
-}
-
-.testimonials .testimonial-item .quote-icon-left {
-  display: inline-block;
-  left: -5px;
-  position: relative;
-}
-
-.testimonials .testimonial-item .quote-icon-right {
-  display: inline-block;
-  right: -5px;
-  position: relative;
-  top: 10px;
-  transform: scale(-1, -1);
-}
-
-.testimonials .testimonial-item p {
-  font-style: italic;
-  margin: 0 15px 15px 15px;
-  padding: 20px;
-  background-color: var(--surface-color);
-  position: relative;
-  margin-bottom: 35px;
-  border-radius: 6px;
-  box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
-}
-
-.testimonials .testimonial-item p::after {
-  content: "";
-  width: 0;
-  height: 0;
-  border-top: 20px solid var(--surface-color);
-  border-right: 20px solid transparent;
-  border-left: 20px solid transparent;
-  position: absolute;
-  bottom: -20px;
-  left: calc(50% - 20px);
-}
-
-.testimonials .swiper-wrapper {
-  height: auto;
-}
-
-.testimonials .swiper-pagination {
-  margin-top: 40px;
-  position: relative;
-}
-
-.testimonials .swiper-pagination .swiper-pagination-bullet {
-  width: 12px;
-  height: 12px;
-  background-color: var(--background-color);
-  opacity: 1;
-  border: 1px solid var(--accent-color);
-}
-
-.testimonials .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: var(--accent-color);
-}
-
-/*--------------------------------------------------------------
-# Contact Section
+# Contact Section - Rubrique Contact
 --------------------------------------------------------------*/
 .contact .info-wrap {
   background-color: var(--surface-color);
@@ -1169,7 +955,7 @@ section,
 }
 
 /*--------------------------------------------------------------
-# Portfolio Details Section
+# Portfolio Details Section - Portfolio Details Section
 --------------------------------------------------------------*/
 .portfolio-details .portfolio-details-slider img {
   width: 100%;
@@ -1227,76 +1013,4 @@ section,
 .portfolio-details .portfolio-description p {
   padding: 0;
   color: color-mix(in srgb, var(--default-color), transparent 30%);
-}
-
-/*--------------------------------------------------------------
-# Service Details Section
---------------------------------------------------------------*/
-.service-details .services-list {
-  padding: 10px 30px;
-  border: 1px solid color-mix(in srgb, var(--default-color), transparent 90%);
-  margin-bottom: 20px;
-}
-
-.service-details .services-list a {
-  display: block;
-  line-height: 1;
-  padding: 8px 0 8px 15px;
-  border-left: 3px solid color-mix(in srgb, var(--default-color), transparent 70%);
-  margin: 20px 0;
-  color: color-mix(in srgb, var(--default-color), transparent 20%);
-  transition: 0.3s;
-}
-
-.service-details .services-list a.active {
-  color: var(--heading-color);
-  font-weight: 700;
-  border-color: var(--accent-color);
-}
-
-.service-details .services-list a:hover {
-  border-color: var(--accent-color);
-}
-
-.service-details .services-img {
-  margin-bottom: 20px;
-}
-
-.service-details h3 {
-  font-size: 26px;
-  font-weight: 700;
-}
-
-.service-details h4 {
-  font-size: 20px;
-  font-weight: 700;
-}
-
-.service-details p {
-  font-size: 15px;
-}
-
-.service-details ul {
-  list-style: none;
-  padding: 0;
-  font-size: 15px;
-}
-
-.service-details ul li {
-  padding: 5px 0;
-  display: flex;
-  align-items: center;
-}
-
-.service-details ul i {
-  font-size: 20px;
-  margin-right: 8px;
-  color: var(--accent-color);
-}
-
-/*--------------------------------------------------------------
-# Starter Section Section
---------------------------------------------------------------*/
-.starter-section {
-  /* Add your styles here */
 }
