Ajustement du bleu du header sur la page détail suite au feedback de la mentor :art:

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -424,7 +424,7 @@ h6 {
 --------------------------------------------------------------*/
 .page-title {
   color: var(--default-color);
-  background-color: #2730ff;
+  background-color: #3b82f6;
   padding: 25px 0;
   position: relative;
 }
